fixed bug that made x and o too big for small windows

--- a/styles.css
+++ b/styles.css
@@ -42,7 +42,7 @@ background: rgba(255, 255, 255, 0.90);
     left: 0;
     right: 0;
     content: "X";
-    font-size: 50px; 
+    font-size: 8vw; 
     color: red;
     line-height: 100px;
     text-align: center;
@@ -57,7 +57,7 @@ background: rgba(255, 255, 255, 0.90);
     left: 0;
     right: 0;
     content: "O";
-    font-size: 50px;
+    font-size: 8vw;
     color: rgb(0, 0, 210);
     line-height: 100px;
     text-align: center;
